--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -87,6 +87,28 @@ a {
   }
 }
 
+/* File upload btn */
+.btn-file {
+  position: relative;
+  overflow: hidden;
+}
+
+.btn-file input[type=file] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+  font-size: 100px;
+  text-align: right;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  outline: none;
+  background: white;
+  cursor: inherit;
+  display: block;
+}
+
 /* Sweet Alert */
 body.stop-scrolling {
   height: 100%;
