added info and statistics to report view

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1034,3 +1034,7 @@ body.stop-scrolling {
   -webkit-animation: pulseWarningIns 0.75s infinite alternate;
   animation: pulseWarningIns 0.75s infinite alternate;
 }
+
+.label-inverse {
+    background: #000000;
+}
