--- a/templates/html/unsubscribe-success.html
+++ b/templates/html/unsubscribe-success.html
@@ -6,7 +6,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen:300,400,500&display=swap" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Oxygen:300,400,500&display=swap"
+    />
     <title>Unsubscribe</title>
     <style type="text/css">
       body {
@@ -14,7 +17,8 @@
       }
 
       .container {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", "Ubuntu", sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+          "Helvetica Neue", "Ubuntu", sans-serif;
         font-size: 14px;
         line-height: 20px;
         background: rgb(227, 232, 238) none repeat scroll 0% 0%;
@@ -71,7 +75,8 @@
         <div class="item">
           <h2 class="heading">Success.</h2>
           <p>
-            You have successfully unsubscribed, and will no longer receive our newsletters.
+            You have successfully unsubscribed, and will no longer receive our
+            newsletters.
           </p>
         </div>
       </div>
